--- a/src/app/plan/plan.component.html
+++ b/src/app/plan/plan.component.html
@@ -1,3 +1,6 @@
 <mat-card class="m-3">
-  <mat-card-title>Final plan</mat-card-title>
+  <mat-card-title>{{ title }}</mat-card-title>
+  <mat-card-content>
+    Here is the plan
+  </mat-card-content>
 </mat-card>
