--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar>
   ST22 Finance planner
 </mat-toolbar>
-<div class="flex flex-wrap">
+<div class="flex flex-wrap p-3">
   <div class="flex-1 basis-full md:basis-1/2">
-    <st-planner></st-planner>
+    <st-planner (planCalculated)="handlePlanCalculated($event)"></st-planner>
   </div>
   <div class="flex-1 basis-full md:basis-1/2">
-    <st-plan></st-plan>
+    <st-plan [st-plan]="plan"></st-plan>
   </div>
 </div>
