--- a/src/app/plan/plan.component.html
+++ b/src/app/plan/plan.component.html
@@ -1,10 +1,12 @@
 <mat-card class="m-3">
   <mat-card-title>{{ title }}</mat-card-title>
-  <mat-card-content>
-    <p *ngIf="plan; else noPlan">Here is the plan</p>
+  <mat-card-content class="pt-5">
+    <div *ngIf="plan; else noPlan">
+      <p>Email: {{plan.email}}</p>
+      <p>Income: {{plan.income}}</p>
+    </div>
     <ng-template #noPlan>
-
+      <p>Please fill the Planner form and click calculate to show your Finance plan!</p>
     </ng-template>
-    <p>Please fill the Planner form and click calculate to show your Finance plan!</p>
   </mat-card-content>
 </mat-card>
