--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   ST22 Finance planner
 </mat-toolbar>
 <div class="flex flex-wrap p-3">
-  <div class="flex-1 basis-full md:basis-1/2">
+  <div class="flex-1 basis-full">
     <st-planner (planCalculated)="handlePlanCalculated($event)"></st-planner>
   </div>
-  <div class="flex-1 basis-full md:basis-1/2">
+  <div class="flex-1 basis-full">
     <st-plan [st-plan]="plan"></st-plan>
   </div>
 </div>
