--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -15,9 +15,9 @@
           </mat-error>
         </mat-form-field>
         <mat-form-field class="w-full mb-5" appearance="fill">
-          <mat-label>Enter your income</mat-label>
+          <mat-label>Income</mat-label>
           <input type="number" matInput [formControl]="incomeFormControl" [errorStateMatcher]="matcher"
-                 placeholder="Ex. pat@example.com" [(ngModel)]="income">
+                 [(ngModel)]="income">
           <mat-hint>* Required field</mat-hint>
           <mat-error *ngIf="incomeFormControl.hasError('min') && !incomeFormControl.hasError('required')">
             The minimum income is 0
@@ -25,6 +25,11 @@
           <mat-error *ngIf="incomeFormControl.hasError('required')">
             Income is <strong>required</strong>
           </mat-error>
+        </mat-form-field>
+        <mat-form-field class="w-full mb-5" appearance="fill">
+          <mat-label>Outcome *</mat-label>
+          <input name="monthlyOutcome" type="number" matInput [(ngModel)]="monthlyOutcome">
+          <mat-hint>* Required field {{ monthlyOutcome }}</mat-hint>
         </mat-form-field>
       </div>
     </div>
